# PAOO

./: CMakeLists.txt  main.cpp
clasa/: CMakeLists.txt  Clasa.cpp
clasa/student/: Student.cpp
clasa/teacher/: Teacher.cpp
